update dependabot.yml file

--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -1,11 +1,15 @@
-name: Raise a dependabot pull request
-on:
-  push:
-    branches:
-      - master
+# Example configuration file that:
+#  - Ignores lodash dependency
+#  - Disables version-updates
 
 version: 2
 updates:
   - package-ecosystem: "npm"
     directory: "/"
+    schedule:
+      interval: "daily"
+    ignore:
+      - dependency-name: "lodash"
+        # For Lodash, ignore all updates
+    # Disable version updates for npm dependencies
     open-pull-requests-limit: 0
